<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".form"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="0dp"
    android:background="#FFC107">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/discribe_issue_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/apptheme"
                android:fontFamily="@font/font1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/describe_your_issue"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/discribe_issue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/font5"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:minHeight="48dp"
                android:hint="@string/describe_your_problem_briefly"/>

            <EditText
                android:id="@+id/adressline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/font5"
                android:hint="@string/area_of_issue"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/postalcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:layout_margin="16dp"
                android:layout_marginTop="10dp"
                android:autofillHints="Postal Hint"
                android:fontFamily="@font/font5"
                android:hint="Postal Code of Area"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/select_pic"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#B53FAF"
                android:fontFamily="@font/font3"
                android:paddingTop="12dp"
                android:text="@string/select_pic"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/upload_pic"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#2FB338"
                android:fontFamily="@font/font3"
                android:paddingTop="12dp"
                android:text="@string/upload"

                android:textAlignment="center"
                android:textSize="20sp" />
            <Button
                android:id="@+id/save_issue"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/lightblue"
                android:fontFamily="@font/font3"
                android:paddingTop="12dp"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textSize="20sp" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>