<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFC107"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="730dp"
                android:background="#FFC107">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="60dp"
                    android:background="#FFC107"
                    android:fontFamily="@font/font4"
                    android:gravity="center"
                    android:text="@string/choose_your_problem_type_from_here"
                    android:textColor="#D50000"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/street_light"
                    android:layout_width="303dp"
                    android:layout_height="66dp"
                    android:layout_marginTop="68dp"
                    android:backgroundTint="@color/green"
                    android:fontFamily="@font/font5"
                    android:gravity="center"
                    android:text="@string/street_lights"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <Button
                    android:id="@+id/electricity"
                    android:layout_width="303dp"
                    android:layout_height="66dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/attractive2"
                    android:fontFamily="@font/font5"
                    android:gravity="center"
                    android:text="@string/electricity"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/street_light" />

                <Button
                    android:id="@+id/water"
                    android:layout_width="303dp"
                    android:layout_height="66dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/attractive3"
                    android:fontFamily="@font/font5"
                    android:gravity="center"
                    android:text="@string/drainage"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/electricity" />

                <Button
                    android:id="@+id/road"
                    android:layout_width="303dp"
                    android:layout_height="66dp"
                    android:layout_marginTop="28dp"
                    android:backgroundTint="@color/black2"
                    android:fontFamily="@font/font5"
                    android:text="@string/road"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/water" />

                <Button
                    android:id="@+id/other"
                    android:layout_width="303dp"
                    android:layout_height="66dp"
                    android:layout_marginTop="29dp"
                    android:backgroundTint="@color/attractive"
                    android:fontFamily="@font/font5"
                    android:text="@string/other"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/road"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/message_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"

                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.954"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/other"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_baseline_message_24"
                    tools:ignore="SpeakableTextPresentCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true" />

</androidx.drawerlayout.widget.DrawerLayout>